fixed switch bug on mobile devices

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body * {
 }
 
 #switch button:hover {
+  /* outline com bug no mobile */
   outline: 8px solid var(--highlight-color);
 }
 
@@ -119,7 +120,7 @@ ul li a {
   color: #fff;
 
   border-radius: 60px;
-  background: #4527A0;
+  background: #4527a0;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
 
@@ -132,7 +133,7 @@ ul li a {
 }
 
 ul li a:hover {
-  background: #512DA8;
+  background: #5e35b1;
 }
 
 /* social links */
@@ -166,15 +167,11 @@ footer ion-icon {
 }
 
 /* media queries */
-/* @media (min-width: 700px) {
-  :root {
-    --bg-url: url(./assets/bg-desktop.jpg);
+@media (max-width: 700px) {
+  #switch button:hover {
+    outline: none;
   }
-
-  .light {
-    --bg-url: url(./assets/bg-desktop-light.jpg);
-  }
-} */
+}
 
 /* animations */
 @keyframes slide-in {
